[build-system]
requires = [
    "setuptools>=42",
    "setuptools-antlr",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "isla-solver"
version = "0.8.0"
authors = [
  { name="Dominic Steinhöfel", email="dominic.steinhoefel@cispa.de" },
]
description = "The ISLa Input Specification Language and its solver."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/isla/"
"Bug Tracker" = "https://github.com/rindPHI/isla/issues"