[build-system]
requires = [
    "setuptools>=42",
    "setuptools-antlr",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "isla-solver"
authors = [
    { name = "Dominic Steinhoefel", email = "dominic.steinhoefel@cispa.de" },
]
description = "The ISLa Input Specification Language and its solver."
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version", "readme"]

dependencies = [
    "antlr4-python3-runtime>=4.13",
    "datrie>=0.8.2",
    "grammar_to_regex>=0.0.4",
    "grammar_graph>=0.2.0",
    "ijson>=3.1.4",
    "more-itertools>=10.1.0",
    "packaging>=21.3",
    "pathos>=0.2.9",
    "proxyorderedset>=0.3.5",
    "returns>=0.21.0",
    "toml>=0.10.2",
    "typeguard>=4.1.5",
    "wheel>=0.37.1",
    "z3-solver==4.12.4.0",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/isla/"
"Bug Tracker" = "https://github.com/rindPHI/isla/issues"

[project.optional-dependencies]
test = [
    "docutils>=0.18.1",
    "matplotlib>=3.5.3",
    "pytest-cov>=3.0.0",
    "pytest-html>=3.1.1",
    "pytest-profiling>=1.7.0",
    "pytest-pycharm>=0.7.0",
    "pytest-randomly>=3.12.0",
    "pytest-rerunfailures>=10.2",
    "pytest-xdist>=2.4.0",
    "pytest>=7.1.2",
    "tox>=3.25.0",
]
dev = [
    "black>=22.8.0",
    "build>=0.8.0",
    "flake8>=5.0.4",
    "setuptools-antlr>=0.4.0",
    "sphinx>=6.1.3",
    "sphinx-book-theme>=1.0.0",
    "twine>=4.0.1",
]

[project.scripts]
isla = "isla.cli:main"

[tool.setuptools]
include-package-data = true  # `true` is the default value

[tool.setuptools.dynamic]
version = {attr = "isla.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 88
target-version = ['py310']
extend-exclude = '''
(
    ^/src/isla/bnf/*
  | ^/src/isla/isla_language/*
  | ^/src/isla/mexpr_lexer/*
  | ^/src/isla/mexpr_parser/*
)
'''

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
