[metadata]
name = isla
version = attr: isla.__version__
author = Dominic Steinhöfel
author_email = dominic.steinhoefel@cispa.de
description = ISLa (Input Specification Language)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/isla
project_urls =
    Bug Tracker = https://github.com/rindPHI/isla/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    grammar2regex @ git+https://github.com/rindPHI/grammar2regex#egg=grammar2regex
    grammargraph @ git+https://github.com/rindPHI/GrammarGraph#egg=grammargraph
    proxyorderedset @ git+https://github.com/rindPHI/proxyorderedset#egg=proxyorderedset
    antlr4-python3-runtime==4.7.1
    datrie>=0.8.2
    wheel>=0.37.1
    z3-solver>=4.8.17.0

dependency_links = git+https://github.com/rindPHI/proxyorderedset#egg=proxyorderedset
    git+https://github.com/rindPHI/GrammarGraph#egg=grammargraph
    git+https://github.com/rindPHI/grammar2regex#egg=grammar2regex

[options.extras_require]
test = docutils>=0.18.1; pytest-cov>=3.0.0; pytest-forked>=1.3.0; pytest-html>=3.1.1; pytest-profiling>=1.7.0; pytest-pycharm>=0.7.0; pytest-rerunfailures>=10.2; pytest-xdist>=2.4.0; pytest>=6.2.5; pytest>=7.1.2; tox>=3.25.0
dev = setuptools-antlr>=0.4.0

[options.packages.find]
where = src

[antlr]
# Specify grammars to generate parsers for; default: None
#grammars = <grammar> [grammar> ...]
# Specify directories where output is generated; default: ./
#output = [default=<output path>]
#         [<grammar>=<output path> ...]
output = default=.
# Generate a parse tree listener (yes|no); default: yes
listener = yes
# Generate parse tree visitor (yes|no); default: no
#visitor = no
# Generate file dependencies (yes|no); default: no
#depend = no
