[metadata]
name = isla
version = attr: isla.__version__
author = Dominic Steinhöfel
author_email = dominic.steinhoefel@cispa.de
description = ISLa (Input Specification Language)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/isla
project_urls =
    Bug Tracker = https://github.com/rindPHI/isla/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    antlr4-python3-runtime>=4.10
    datrie>=0.8.2
    grammar_to_regex>=0.0.2
    grammar_graph>=0.1.0
    packaging>=21.3
    pathos>=0.2.9
    proxyorderedset>=0.3.0
    wheel>=0.37.1
    z3-solver>=4.8.17.0

[options.extras_require]
test =
    docutils>=0.18.1
    pytest-cov>=3.0.0
    pytest-html>=3.1.1
    pytest-profiling>=1.7.0
    pytest-pycharm>=0.7.0
    pytest-rerunfailures>=10.2
    pytest-xdist>=2.4.0
    pytest>=7.1.2
    tox>=3.25.0
dev =
    setuptools-antlr>=0.4.0
    build>=0.8.0
    twine>=4.0.1

[options.packages.find]
where = src

[antlr]
# Specify grammars to generate parsers for; default: None
#grammars = <grammar> [grammar> ...]
# Specify directories where output is generated; default: ./
#output = [default=<output path>]
#         [<grammar>=<output path> ...]
output = default=.
# Generate a parse tree listener (yes|no); default: yes
listener = yes
# Generate parse tree visitor (yes|no); default: no
#visitor = no
# Generate file dependencies (yes|no); default: no
#depend = no
