[metadata]
name = isla
version = attr: isla.__version__
author = Dominic Steinhoefel
author_email = dominic.steinhoefel@cispa.de
description = ISLa (Input Specification Language)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/isla
project_urls =
    Bug Tracker = https://github.com/rindPHI/isla/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.10

[mypy]
plugins =
  returns.contrib.mypy.returns_plugin

[antlr]
# Specify grammars to generate parsers for; default: None
#grammars = <grammar> [grammar> ...]
# Specify directories where output is generated; default: ./
#output = [default=<output path>]
#         [<grammar>=<output path> ...]
output = default=.
# Generate a parse tree listener (yes|no); default: yes
listener = yes
# Generate parse tree visitor (yes|no); default: no
#visitor = no
# Generate file dependencies (yes|no); default: no
#depend = no
